# solana

./: .gitignore  Cargo.toml  config.toml  notes.md  rust-toolchain
account-decoder/: Cargo.toml
account-decoder/src/: parse_account_data.rs
banks-client/src/: error.rs
cli/: Cargo.toml
cli-output/src/: cli_output.rs  display.rs
cli/src/: cluster_query.rs  evm.rs
client/: Cargo.toml
client-test/: Cargo.toml
client/src/: rpc_client.rs  rpc_request.rs  rpc_response.rs  tpu_client.rs
core/: Cargo.toml
core/src/: accounts_hash_verifier.rs  banking_stage.rs  ledger_cleanup_service.rs  lib.rs  repair_service.rs  replay_stage.rs  retransmit_stage.rs  rpc.rs  serve_repair.rs  validator.rs
core/tests/: snapshots.rs
evm-utils/evm-block-recovery/: Cargo.toml
evm-utils/subchain-manager/: Cargo.toml
evm-utils/subchain-manager/src/: genesis_json.rs  implementation.rs  main.rs
faucet/: Cargo.toml
genesis/: Cargo.toml
gossip/: Cargo.toml
install/: Cargo.toml
keygen/: Cargo.toml
ledger/: Cargo.toml
ledger-tool/: Cargo.toml
local-cluster/: Cargo.toml
logger/: Cargo.toml
multinode-demo/: bootstrap-validator.sh  validator.sh
net-utils/: Cargo.toml
program-runtime/: Cargo.toml
repair-check/: Cargo.toml
replica-lib/: Cargo.toml
replica-node/: Cargo.toml
rpc/: Cargo.toml
rpc-test/: Cargo.toml
runtime/: Cargo.toml
scripts/: cargo-install-all.sh
sdk/: Cargo.toml
storage-bigtable/: Cargo.toml
storage-proto/: Cargo.toml
sys-tuner/: Cargo.toml
test-validator/: Cargo.toml
transaction-status/: Cargo.toml
validator/: Cargo.toml
version/: Cargo.toml
(+111 files in other folders)
