[package]
name = "repair-check"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = "2.33.1"
log = "0.4.14"
rand = "0.7.0"

solana-core = { path = "../core", version = "=1.13.7" }
solana-gossip = { path = "../gossip", version = "=1.13.7" }
solana-logger = { path = "../logger", version = "=1.13.7" }
solana-net-utils = { path = "../net-utils", version = "=1.13.7" }
solana-sdk = { path = "../sdk", version = "=1.13.7" }
solana-streamer = { path = "../streamer", version = "=1.13.7" }
solana-version = { path = "../version" }
